--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"hono": "^4.8.3"
+		"hono": "^4.8.3",
+		"better-auth": "^1.4.7",
+		"@better-auth/cloudflare": "^1.4.7"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.3",
